# course_work_3

./: README.md  pyproject.toml
main/: main.py  utils.py
tests/: test_utils.py
