[tool.poetry]
name = "course-work-3"
version = "0.1.0"
description = "course work 3 by Pavel Lamteshkin"
authors = ["Pavel Lamteshkin"]
readme = "README.md"
packages = [{include = "course_work_3"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
